moved default fiat value to env

--- a/serve/.env.sample
+++ b/serve/.env.sample
@@ -1,5 +1,6 @@
 NEXANDRIA_URL='https://api.nexandria.com'
 NEXANDRIA_API_KEY='nexandria'
+DEFAULT_TRANSFER_VALUE=0.0001
 
 ADDRESS_SKIP_LIST='/tmp/non_eoa_address.txt'
 
