loading blocklist address from file

--- a/serve/.env.sample
+++ b/serve/.env.sample
@@ -2,7 +2,7 @@ NEXANDRIA_URL='https://api.nexandria.com'
 NEXANDRIA_API_KEY='nexandria'
 DEFAULT_TRANSFER_VALUE=0.0001
 
-ADDRESS_SKIP_LIST='/tmp/non_eoa_address.txt'
+NON_EOA_LIST='/tmp/non_eoa_address.txt'
 
 # override defaults
 # NEXANDRIA_MAX_CONCURRENCY=5
