--- a/serve/pyproject.toml
+++ b/serve/pyproject.toml
@@ -13,6 +13,8 @@ loguru = "^0.7.2"
 psutil = "^5.9.8"
 pydantic-settings = "^2.1.0"
 httpx = "^0.26.0"
+numpy = "^1.26.4"
+pandas = "^2.2.0"
 
 
 [build-system]
