--- a/serve/pyproject.toml
+++ b/serve/pyproject.toml
@@ -12,9 +12,9 @@ uvicorn = "^0.27.1"
 loguru = "^0.7.2"
 psutil = "^5.9.8"
 pydantic-settings = "^2.1.0"
-httpx = "^0.26.0"
 numpy = "^1.26.4"
 pandas = "^2.2.0"
+aiohttp = "^3.9.3"
 
 
 [build-system]
