integrated go-eigentrust and refactored some names

--- a/serve/.env.sample
+++ b/serve/.env.sample
@@ -1,5 +1,7 @@
 NEXANDRIA_URL='https://api.nexandria.com'
 NEXANDRIA_API_KEY='nexandria'
+GO_EIGENTRUST_URL=http://localhost:8080
+
 DEFAULT_TRANSFER_VALUE=0.0001
 
 NON_EOA_LIST='/tmp/non_eoa_address.txt'
@@ -10,3 +12,9 @@ NON_EOA_LIST='/tmp/non_eoa_address.txt'
 # NEXANDRIA_RATE_LIMIT=12
 # LOG_LEVEL='INFO'
 # RELOAD_FREQ_SECS=3600
+
+# EIGENTRUST_ALPHA=0.5
+# EIGENTRUST_EPSILON=1.0
+# EIGENTRUST_MAX_ITER=50
+# EIGENTRUST_FLAT_TAIL=2
+# GO_EIGENTRUST_TIMEOUT_MS=3000
